# ml-pipeline-deployment

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: predict_route.py  routes.py
app/core/: config.py  logger.py
app/models/: model.joblib  model_loader.py  scaler.joblib
app/pipeline/: evaluate.py  preprocess.py  train.py
app/schemas/: prediction_schema.py
artifacts/: metrics_v1.pkl  preprocessor_v1.pkl
