[project]
name = "ml-pipeline-deployment"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "uvicorn (>=0.37.0,<0.38.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

